# rust-life-game

./: Cargo.toml  README.md
src/: lib.rs  life_game.rs  main.rs  utils.rs
