[package]
name = "rust-life-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.66"
rand = "0.8.5"
wasm-bindgen = "0.2.89"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
