[package]
name = "rust-life-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.66"
rand = "0.8.5"
wasm-bindgen = "0.2.89"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = []
